# near-contract

./: Cargo.toml  README.md  build_docker_m1.sh  build_local.sh  package.json
contract/src/: lib.rs  object.rs  utils.rs
contract/tests/workspaces/: main.rs
test/: rest-api-test-utils.js
